@@ -1,5 +1,9 @@
 2007-07-25 Xavier Claessens  <xclaesse@gmail.com>
 
+	* libempathy/empathy-filter.c: Adding more debug output.
+
+2007-07-25 Xavier Claessens  <xclaesse@gmail.com>
+
 	* libempathy/empathy-tp-contact-list.c: Add a check to be sure the
 	new channel is valid in the NewChannel cb. Fixes bug #451564.
 
